--- a/.github/workflows/rss_processor.yml
+++ b/.github/workflows/rss_processor.yml
@@ -1,1 +1,26 @@
+name: Run RSS Processor
 
+on:
+  schedule:
+    - cron: '*/30 * * * *'  # Запускать каждые 30 минут
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'  # Укажите версию Python, которую вы хотите использовать
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install feedparser beautifulsoup4  # Установите необходимые зависимости
+
+      - name: Run the script
+        run: python rss_processor.py  # Запустите ваш скрипт
