--- a/.github/workflows/rss_processor.yml
+++ b/.github/workflows/rss_processor.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'  # Укажите версию Python, которую вы хотите использовать
+          python-version: '3.10'  # Укажите версию Python, которую вы хотите использовать
 
       - name: Install dependencies
         run: |
