--- a/.github/workflows/rss_processor.yml
+++ b/.github/workflows/rss_processor.yml
@@ -1,8 +1,11 @@
-name: Run RSS Processor
+name: RSS Processor
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Запускать каждые 30 минут
+    - cron: '*/30 * * * *'  # Запускать каждый час
+  push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -15,12 +18,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10'  # Укажите версию Python, которую вы хотите использовать
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install feedparser beautifulsoup4  # Установите необходимые зависимости
+          pip install schedule
+          pip install feedparser
+          pip install beautifulsoup4
 
-      - name: Run the script
-        run: python rss_processor.py  # Запустите ваш скрипт
+      - name: Run rss_processor.py
+        run: python rss_processor.py
