--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for rssbuilder on 2025-01-02T20:34:14Z
+# fly.toml app configuration file generated for rssbuilder-b6ld1q on 2025-01-02T21:09:01Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'rssbuilder'
+app = 'rssbuilder-b6ld1q'
 primary_region = 'fra'
 
 [build]
